# fp-homework

./: README.md  stack.yaml
hw0/: README.md  hw0.cabal
hw0/src/: Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs
hw1/: README.md  hw1.cabal
hw1-second-chance/: README.md  hw1-second-chance.cabal
hw1-second-chance/src/: Block6.hs
hw1-second-chance/test/: Spec.hs
hw1/src/: Block1.hs  Block2.hs  Block3.hs  Block4.hs  Block5.hs  Block6.hs
hw1/test/: Spec.hs
hw2/: README.md  hw2.cabal
hw2/app/: Main.hs
hw2/src/: DirectoryState.hs  Lib.hs  Utils.hs  VCSCommands.hs  VcsIO.hs
hw2/test/: Spec.hs
hw2/testData/: anotherFile  lala  notReadMe
hw2/testData/cats/: meow
hw2/testData/dogs/: woof
hw2/testData/elleFunning/elle/: NY
hw2/testData/elleFunning/funning/: wjuh
hw3/: LICENSE  README.md  hw3.cabal
hw3/benchmark/: Main.hs
hw3/src/: ComonadUtils.hs  HSexamples.hs  Task1.hs  Task2.hs  Task3.hs  Task4.hs  Task5.hs  Task6.hs  Task7.hs  Task8.hs
hw3/test/: Geometry.hs  HashTable.hs  Lens.hs  Spec.hs
practice1/: README.md  practice1.cabal
practice1/app/: Main.hs
practice1/src/: Lib.hs
practice2/: README.md  practice2.cabal
practice2/app/: Main.hs
practice2/src/: Task1.hs  Task2.hs
practice3/: README.md  practice3.cabal
practice3/src/: Task1.hs  Task2.hs
practice4/: README.md  practice4.cabal
practice4/app/: Main.hs
practice4/src/: Task1.hs  Task2.hs  Task3.hs
