name:                hw1
version:             0.1.0.0
synopsis:            Synopsis for task 1
description:         Task 1 for FP ITMO course

homepage:            https://github.com/tihonovcore/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Tihonov Vitaly
maintainer:          tihonovcore@gmail.com
copyright:           2020 Tihonov Vitaly

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Block1, Block2, Block3, Block4, Block5, Block6
  ghc-options:
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010

test-suite hw1-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base, hw1, QuickCheck, hspec
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010