name:                hw3
version:             0.1.0.0
synopsis:            Synopsis for task 3
description:         Task 3 for FP ITMO course

homepage:            https://github.com/tihonovcore/fp-homework/tree/master/hw3#readme
license:             MIT
license-file:        LICENSE
author:              Tihonov Vitaly
maintainer:          tihonovcore@gmail.com
copyright:           2020 Tihonov Vitaly

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Task1
                     , Task2
                     , Task3
                     , Task4
                     , HSexamples
                     , Task5
                     , Task6
                     , Task7
                     , ComonadUtils
                     , Task8
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
                     , hashable
                     , stm
                     , mtl
                     , microlens
                     , directory
                     , filepath
                     , comonad
                     , random
  default-language:    Haskell2010

executable hw3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hw3
  default-language:    Haskell2010

test-suite hw3-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Geometry
                     , HashTable
                     , Lens
  build-depends:       base
                     , hw3
                     , hspec
                     , QuickCheck
                     , mtl
                     , async
                     , microlens
  ghc-options:         -Wall -Werror -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark hw3-benchmark
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     benchmark
  ghc-options:        -Wall -Werror -threaded -rtsopts -with-rtsopts=-N4
  build-depends:      base >=4.9 && <5
                    , hw3
                    , criterion
                    , random
  default-language:   Haskell2010
