name:                practice1
version:             0.1.0.0
synopsis:            Synopsis for practice 1
description:         Practice 1 for FP ITMO course

homepage:            https://github.com/tihonovcore/fp-homework/tree/master/hw1#readme
license:             MIT
license-file:        LICENSE
author:              Tihonov Vitaly
maintainer:          tihonovcore@gmail.com
copyright:           2020 Tihonov Vitaly

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  ghc-options:         -Wall
  build-depends:       base >= 4.9 && < 5
  default-language:    Haskell2010
